--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
                 <div class="about-experience1">
                     <h4>100% </h4>
-                    <span>Satisfied <br> Customer</span>
+                    <span>Satisfied <br> Clients</span>
                 </div>
             </div>
             <div class="about-section-content">
@@ -461,7 +461,7 @@
                         <div class="about-processBar-container">
                             <div class="process-bar process2" id="proTwo"></div>
                         </div>
-                        <span class="tit">Satisfied Customer</span>
+                        <span class="tit">Satisfied Clients</span>
                     </div>
                     <div class="about-process-container">
                         <div class="about-process-miniBox">
