--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,7 @@
                     <a class="nav-link" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="blog.html" target="_blank">Blogs</a>
+                    <a class="nav-link" href="blog.html">Blogs</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -215,28 +215,26 @@
 
     <!-- Banner Section Start -->
     <!-- Swiper -->
-    <div class="hero-section">
-        <div class="hero-img-wrap">
-            <div class="hero-bg-half"></div>
-            <div class="hero-shape"></div>
-            <div class="hero-men"></div>
-        </div>
-        <div class="container">
-            <div class="hero-content">
-                <h4 class="wow fade-in-bottom" data-wow-delay="200ms"
-                    style="visibility: visible; animation-delay: 200ms; animation-name: fade-in-bottom;">Trusted
-                    construction company</h4>
-                <h1 class="wow fade-in-bottom" data-wow-delay="400ms"
-                    style="visibility: visible; animation-delay: 400ms; animation-name: fade-in-bottom;">Contact
-                    <span>Thomson<br> construction</span>
-                </h1>
-                <p class="wow fade-in-bottom" data-wow-delay="600ms"
-                    style="visibility: visible; animation-delay: 600ms; animation-name: fade-in-bottom;">Everything your
-                    construction needs is already here! <br>Buildex made for industrial solution!</p>
-
+   
+  <div style="height: 400px;" class="hero-banner">
+    <div style="height: 400px;"  class="hero-banner-container">
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="assets/images/banner/2.jpg" alt="Thomson-construction-banner">
+                    <div class="banner-content">
+                        <h4>Trusted construction company</h4>
+                       <h1>Build your dream <br>house <span>today!</span></h1>
+                       <p>Everything your
+                        construction needs is already here! <br>Buildex made for industrial solution!</p>
+                    </div>
+                </div>
+               
             </div>
+           
         </div>
     </div>
+</div>
 
 
     <!-- Banner Section End -->
