--- a/renovation.html
+++ b/renovation.html
@@ -215,42 +215,26 @@
 
     <!-- Banner Section Start -->
     <!-- Swiper -->
-    <div class="hero-section">
-        <div class="hero-img-wrap">
-            <div class="hero-bg-half"></div>
-            <div class="hero-shape"></div>
-            <div class="hero-men"></div>
-        </div>
-        <div class="container">
-            <div class="hero-content">
-                <h4 class="wow fade-in-bottom" data-wow-delay="200ms"
-                    style="visibility: visible; animation-delay: 200ms; animation-name: fade-in-bottom;">Trusted
-                    construction company</h4>
-                <h1 class="wow fade-in-bottom" data-wow-delay="400ms"
-                    style="visibility: visible; animation-delay: 400ms; animation-name: fade-in-bottom;">Renovation
-                    <span><br> Work</span>
-                </h1>
-                <p class="wow fade-in-bottom" data-wow-delay="600ms"
-                    style="visibility: visible; animation-delay: 600ms; animation-name: fade-in-bottom;">Everything your
-                    construction needs is already here! <br>Buildex made for industrial solution!</p>
-                <div class="btn-group wow fade-in-bottom" data-wow-delay="800ms"
-                    style="visibility: visible; animation-delay: 800ms; animation-name: fade-in-bottom;">
-                    <a href="#" class="default-btn">Contact Us</a>
-                    <span class="play-icon">
-                        <svg aria-hidden="true" focusable="false" role="img" xmlns="http://www.w3.org/2000/svg"
-                            viewBox="0 0 448 512">
-                            <path fill="currentColor"
-                                d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z">
-                            </path>
-                        </svg>
-                    </span>
-                    </a>
+ 
+    <div style="height: 400px;" class="hero-banner">
+        <div style="height: 400px;"  class="hero-banner-container">
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="assets/images/banner/1.jpg" alt="Thomson-construction-banner">
+                        <div class="banner-content">
+                            <h4>Trusted construction company</h4>
+                           <h1>Build your dream <br>house <span>today!</span></h1>
+                           <p>Everything your
+                            construction needs is already here! <br>Buildex made for industrial solution!</p>
+                        </div>
+                    </div>
+                   
                 </div>
+               
             </div>
         </div>
     </div>
-
-
     <!-- Banner Section End -->
 
 
@@ -287,7 +271,12 @@
 
                     <h5 style="text-align: center;">Interior</h5>
                 </a>
-                <li><a class="dropdown-item" href="project-management.html">Project Management</a></li>
+                <a href="project-management.html" class="website-serve-boxs website-serve-boxs2">
+                    <img src="assets/images/png/png/4.png" alt="Modules">
+
+
+                    <h5 style="text-align: center;">Project Management</h5>
+                </a>
                 <a href="renovation.html" class="website-serve-boxs tt2 website-serve-boxs2">
                     <img src="assets/images/png/png/6.png" alt="Modules">
 
