--- a/project-link.html
+++ b/project-link.html
@@ -39,7 +39,6 @@
 <body>
 
 
-    <!-- Navbar one start -->
 
     <!-- Navbar one start -->
     <nav class="navbar navbar-expand-lg d-block  rounded">
@@ -242,184 +241,148 @@
 
     <!-- Banner Section End -->
 
-    <!-- Case Studies section Start -->
+    <!-- url Section start -->
 
-    <section class="case-studies-section">
-        <div class="technologies-overlay1"></div>
-        <div class="technologies-overlay2"></div>
-        <div class="case-studies-container">
-            <div class="case-box-container">
-                <a href="project-link.html">
-                    <div class="case-boxs">
-                        <div class="case-boxs-img">
-                            <img src="assets/images/pics/res/10.jpg" alt="Project-photos">
-                        </div>
+    <section class="url-section">
+        <div class="url-container container">
 
-                        <div class="case-content">
-                            <div class="case-title">
-                                <span class="case-services">Construction</span>
-                                <span class="case-industries">Interior</span>
-                            </div>
-                            <div class="case-heading">
-                                <h2>Construction work in Erode</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis fugit ratione ab
-                                    est mollitia iusto, at dicta necessitatibus incidunt quo pariatur iure fugiat omnis
-                                    quam error adipisci repudiandae aliquam consequuntur!</p>
-                            </div>
-                        </div>
-                    </div>
-
-                </a>
-
-
-                <hr>
-
-                <!-- ///////////////////////////////////// -->
-
-                <a href="project-link.html">
-
-                    <div class="case-boxs">
-                        <div class="case-boxs-img">
-                            <img src="assets/images/pics/res/17.jpg" alt="Project-photos">
-                        </div>
-
-                        <div class="case-content">
-                            <div class="case-title">
-                                <span class="case-services">Construction</span>
-                                <span class="case-industries">Interior</span>
-                            </div>
-                            <div class="case-heading">
-                                <h2>Construction work in Erode</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis fugit ratione ab
-                                    est mollitia iusto, at dicta necessitatibus incidunt quo pariatur iure fugiat omnis
-                                    quam error adipisci repudiandae aliquam consequuntur!</p>
-                            </div>
-                        </div>
-                    </div>
-
-                </a>
-
-                <hr>
-
-
-                <!-- ///////////////////////////////////// -->
-
-                <a href="project-link.html">
-
-                    <div class="case-boxs">
-                        <div class="case-boxs-img">
-                            <img src="assets/images/pics/res/9.jpg" alt="Project-photos">
-                        </div>
-
-                        <div class="case-content">
-                            <div class="case-title">
-                                <span class="case-services">Architectural</span>
-                                <span class="case-industries">House</span>
-                            </div>
-                            <div class="case-heading">
-                                <h2>Architectural work in Madurai</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis fugit ratione ab
-                                    est mollitia iusto, at dicta necessitatibus incidunt quo pariatur iure fugiat omnis
-                                    quam error adipisci repudiandae aliquam consequuntur!</p>
-                            </div>
-                        </div>
-                    </div>
-
-                </a>
-                <hr>
-
-            </div>
-            <div class="case-box-container case-box-container-2">
-
-                <div class="case-projects-details">
-                    <span class="case-projects-num">300+</span>
-                    <span class="case-prject-details">
-                        Implemented projects
-                    </span>
+            <div class="url-boxs">
+                <div class="url-icons">
+                    <i class="fa-solid fa-business-time"></i>
                 </div>
-                <a href="project-link.html">
-
-
-
-                    <div class="case-boxs">
-                        <div class="case-boxs-img">
-                            <img src="assets/images/pics/res/19.jpg" alt="Project-photos">
-                        </div>
-
-                        <div class="case-content">
-                            <div class="case-title">
-                                <span class="case-services">Construction</span>
-                                <span class="case-industries">Exterior</span>
-                            </div>
-                            <div class="case-heading">
-                                <h2>Exterior work in residential building at Coimbatore</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis fugit ratione ab
-                                    est mollitia iusto, at dicta necessitatibus incidunt quo pariatur iure fugiat omnis
-                                    quam error adipisci repudiandae aliquam consequuntur!</p>
-                            </div>
-                        </div>
-                    </div>
-
-                </a>
-                <hr>
-
-                <!-- ///////////////////////////////////// -->
-
-                <a href="project-link.html">
-
-                    <div class="case-boxs">
-                        <div class="case-boxs-img">
-                            <img src="assets/images/pics/res/20.jpg" alt="Project-photos">
-                        </div>
-
-                        <div class="case-content">
-                            <div class="case-title">
-                                <span class="case-services">Construction</span>
-                                <span class="case-industries">Interior</span>
-                            </div>
-                            <div class="case-heading">
-                                <h2>Plastering work in Ariyalur</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis fugit ratione ab
-                                    est mollitia iusto, at dicta necessitatibus incidunt quo pariatur iure fugiat omnis
-                                    quam error adipisci repudiandae aliquam consequuntur!</p>
-                            </div>
-                        </div>
-                    </div>
-
-                </a>
-                <hr>
-
-                <!-- ///////////////////////////////////// -->
-
-                <a href="project-link.html">
-
-                    <div class="case-boxs">
-                        <div class="case-boxs-img">
-                            <img src="assets/images/pics/res/15.jpg" alt="Project-photos">
-                        </div>
-
-                        <div class="case-content">
-                            <div class="case-title">
-                                <span class="case-services">Construction</span>
-                                <span class="case-industries">Interior</span>
-                            </div>
-                            <div class="case-heading">
-                                <h2>Construction work in Erode</h2>
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis fugit ratione ab
-                                    est mollitia iusto, at dicta necessitatibus incidunt quo pariatur iure fugiat omnis
-                                    quam error adipisci repudiandae aliquam consequuntur!</p>
-                            </div>
-                        </div>
-                    </div>
-
-                </a>
-                <hr>
-
+                <div class="url-content">
+                    <p>Business Type : Residential building</p>
+                </div>
             </div>
+            <div class="url-boxs">
+                <div class="url-icons">
+                    <i class="fa-solid fa-bullseye"></i>
+                </div>
+                <div class="url-content">
+                    <p>Focus : Exterior</p>
+                </div>
+            </div>
+            <div class="url-boxs">
+                <div class="url-icons">
+                    <i class="fa-solid fa-person-military-to-person"></i>
+                </div>
+                <div class="url-content">
+                    <p>Client Industry : Hardware Maintenance</p>
+                </div>
+            </div>
+
         </div>
     </section>
 
-    <!-- Case Studies section End -->
+    <!-- url Section End -->
+
+
+    <!-- Next Big Technology Team Start -->
+
+    <section class="next-big-tech">
+        <div class="next-big-title container">
+            <h2 style="color: var(--color);">Descriptions </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dignissimos culpa nulla, dicta nostrum
+                voluptates perspiciatis molestiae consequuntur in itaque similique eum dolorum, quibusdam expedita
+                magnam accusamus. Eum ullam perspiciatis porro voluptatem impedit cumque nihil optio consequatur tempore
+                facilis sit deserunt, quae, aliquid adipisci exercitationem tenetur, voluptatum quia quibusdam qui
+                doloremque magni reiciendis. Optio illo, sint alias qui delectus harum atque, porro laboriosam sequi
+                deserunt minima facere veniam culpa sapiente nemo illum aut aliquid est eligendi maiores blanditiis
+                error tempore! Cum beatae architecto quaerat minus earum autem. Odit adipisci eius qui expedita? Earum
+                pariatur perspiciatis nihil cupiditate dicta, beatae debitis.</p>
+        </div>
+        <div class="project-gallery container">
+            <a href="assets/images/pics/res/11.jpg" class="im1" data-lightbox="Our Gallery"
+                data-title="Our Work Sample"><img src="assets/images/pics/res/11.jpg" alt="Gallery-Page-Image"
+                    class="img-fluid"></a>
+            <div class="project-image-container">
+                <a href="assets/images/pics/res/7.jpg"  data-lightbox="Our Gallery"
+                    data-title="Our Work Sample"><img src="assets/images/pics/res/7.jpg" alt="Gallery-Page-Image"
+                        class="img-fluid"></a>
+                <a href="assets/images/pics/res/9.jpg"  data-lightbox="Our Gallery"
+                    data-title="Our Work Sample"><img src="assets/images/pics/res/9.jpg" alt="Gallery-Page-Image"
+                        class="img-fluid"></a>
+
+            </div>
+        </div>
+
+    </section>
+
+    <style>
+        .next-big-tech {
+            width: 100%;
+            height: auto;
+            text-align: center;
+            margin-bottom: 5%;
+        }
+
+        .next-big-title {
+            margin-bottom: 3%;
+        }
+
+        .next-big-title h5 {
+            color: var(--light);
+        }
+
+        .next-big-title h2 {
+            color: var(--light);
+        }
+
+        .next-big-title h2 span {
+            color: var(--color);
+        }
+
+        .project-gallery {
+            width: 100%;
+            height: auto;
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+
+        .project-gallery .im1 {
+            width: 47%;
+            height: 400px;
+            overflow: hidden;
+            object-fit: cover;
+            border-radius: 25px;
+        }
+
+        .project-gallery .im1 img {
+            width: 100%;
+            object-fit: cover;
+            height: 100%;
+        }
+
+        .project-image-container {
+            width: 47%;
+            height: 400px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+        }
+
+        .project-image-container a {
+            width: 100%;
+            height: 47%;
+            border-radius: 25px;
+            overflow: hidden;
+        }
+
+        .project-image-container a img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+
+        }
+    </style>
+
+    <!-- Next Big Technology Team End -->
+
+
+    <!-- Next Big Technology Team End -->
+
+
     <!-- Footer Start -->
 
     <footer>
@@ -514,6 +477,24 @@
     </section>
 
     <!-- After Footer End -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -668,6 +649,7 @@
             }
         }
     </script>
+
 
 
 
