--- a/blog.html
+++ b/blog.html
@@ -98,7 +98,7 @@
                     <a class="nav-link" href="projects.html">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="blog.html" target="_blank">Blogs</a>
+                    <a class="nav-link" href="blog.html">Blogs</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
