--- a/about.html
+++ b/about.html
@@ -30,6 +30,18 @@
     <!-- Owl Carousel  -->
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+
+    <style>
+        .loading{
+    width: 80% !important;
+    transition: 2s ease-out !important;
+}
+
+.loading2{
+    transition: 2s ease-in-out !important;
+    width: 95% !important;
+}
+    </style>
 </head>
 
 <body>
