--- a/about.html
+++ b/about.html
@@ -50,7 +50,9 @@
     <!-- Navbar one start -->
  <!-- Navbar one start -->
 
- <nav class="navbar navbar-expand-lg d-block  rounded">
+  <!-- Navbar one start -->
+
+  <nav class="navbar navbar-expand-lg d-block  rounded">
     <div class="container-fluid d-flex justify-content-between px-lg-5 ">
         <a class="navbar-brand" href="index.html">
             <img src="assets/images/logo/logo (2).png" alt="logo">
@@ -109,6 +111,9 @@
                   </li>
                 <li class="nav-item">
                     <a class="nav-link" href="projects.html">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="blog.html">Blogs</a>
@@ -204,8 +209,12 @@
                             </ul>
                           </li>
                         <li class="nav-item">
-                            <a class="nav-link"
+                            <a class="nav-link" 
                                 href="projects.html">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" 
+                                href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link"
