--- a/commercial.html
+++ b/commercial.html
@@ -37,6 +37,7 @@
 
     <!-- Navbar one start -->
  <!-- Navbar one start -->
+ <!-- Navbar one start -->
 
  <nav class="navbar navbar-expand-lg d-block  rounded">
     <div class="container-fluid d-flex justify-content-between px-lg-5 ">
@@ -97,6 +98,9 @@
                   </li>
                 <li class="nav-item">
                     <a class="nav-link" href="projects.html">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="blog.html">Blogs</a>
@@ -192,8 +196,12 @@
                             </ul>
                           </li>
                         <li class="nav-item">
-                            <a class="nav-link"
+                            <a class="nav-link" 
                                 href="projects.html">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" 
+                                href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link"
@@ -211,7 +219,6 @@
         </div>
     </div>
 </nav>
-
     <!-- Banner Section Start -->
     <!-- Swiper -->
    
