--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
 
     <!-- Navbar one start -->
  <!-- Navbar one start -->
+ <!-- Navbar one start -->
 
  <nav class="navbar navbar-expand-lg d-block  rounded">
     <div class="container-fluid d-flex justify-content-between px-lg-5 ">
@@ -98,6 +99,9 @@
                   </li>
                 <li class="nav-item">
                     <a class="nav-link" href="projects.html">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="blog.html">Blogs</a>
@@ -193,8 +197,12 @@
                             </ul>
                           </li>
                         <li class="nav-item">
-                            <a class="nav-link"
+                            <a class="nav-link" 
                                 href="projects.html">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" 
+                                href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link"
