--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 <body>
 
 
-
-   
+    
     <!-- Navbar one start -->
 
     <nav class="navbar navbar-expand-lg d-block  rounded">
@@ -101,6 +100,9 @@
                       </li>
                     <li class="nav-item">
                         <a class="nav-link" href="projects.html">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="gallery.html">Gallery</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="blog.html">Blogs</a>
@@ -198,6 +200,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" 
                                     href="projects.html">Projects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" 
+                                    href="gallery.html">Gallery</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link"
