--- a/renovation.html
+++ b/renovation.html
@@ -38,8 +38,9 @@
     <!-- Navbar one start -->
 
   <!-- Navbar one start -->
+ <!-- Navbar one start -->
 
-  <nav class="navbar navbar-expand-lg d-block  rounded">
+ <nav class="navbar navbar-expand-lg d-block  rounded">
     <div class="container-fluid d-flex justify-content-between px-lg-5 ">
         <a class="navbar-brand" href="index.html">
             <img src="assets/images/logo/logo (2).png" alt="logo">
@@ -98,6 +99,9 @@
                   </li>
                 <li class="nav-item">
                     <a class="nav-link" href="projects.html">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="blog.html">Blogs</a>
@@ -193,8 +197,12 @@
                             </ul>
                           </li>
                         <li class="nav-item">
-                            <a class="nav-link"
+                            <a class="nav-link" 
                                 href="projects.html">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" 
+                                href="gallery.html">Gallery</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link"
@@ -212,7 +220,6 @@
         </div>
     </div>
 </nav>
-
     <!-- Banner Section Start -->
     <!-- Swiper -->
  
