--- a/about.html
+++ b/about.html
@@ -447,15 +447,15 @@
                     <div class="footer-icon">
                         <i class="fa-solid fa-location-dot"></i> <span>LOCATION</span>
                     </div>
-                    <p>4/44, First Floor, Sai Jairam apartments, Kaliappa, Rangai Gowder St, NGGO Colony, PO, Coimbatore, Tamil Nadu 641022</p>
+                    <p>SF No-146, D No. 7/69-7,Thomson casa, CMC School Road, Kuppanur, Madampatty, Coimbatore, Tamil Nadu-641010</p>
                 </div>
                 <div class="footer-address-heading">
                     <div class="footer-icon">
                         <i class="fa-solid fa-phone"></i> <span>CALL US</span>
                     </div>
                     <div class="d-flex flex-column">
-                        <a href="tel:+91">+91 98765 43210</a>
-                        <a href="tel:+91">+91 98765 43210</a>
+                        <a href="tel:+917910833585">+91 79108 33585</a>
+                        <a href="tel:+918220149256">+91 82201 49256</a>
                     </div>
                     
                 </div>
@@ -464,7 +464,8 @@
                         <i class="fa-solid fa-phone"></i>
                         <span>EMAIL US</span>
                     </div>
-                    <a href="#">infothomsan@gmail.com</a>
+                    <a href="mailto:thomas@thomsonbuilders.co.in">thomas@thomsonbuilders.co.in</a>
+                    <a href="mailto:info@thomsonbuilders.co.in">info@thomsonbuilders.co.in</a>
                 </div>
             </div>
         </div>
