--- a/residential.html
+++ b/residential.html
@@ -662,8 +662,7 @@
                         <div class="footer-icon">
                             <i class="fa-solid fa-location-dot"></i> <span>LOCATION</span>
                         </div>
-                        <p>4/44, First Floor, Sai Jairam apartments, Kaliappa, Rangai Gowder St, NGGO Colony, PO,
-                            Coimbatore, Tamil Nadu 641022</p>
+                        <p>SF No-146, D No. 7/69-7,Thomson casa, CMC School Road, Kuppanur, Madampatty, Coimbatore, Tamil Nadu-641010</p>
                     </div>
                     <div class="footer-address-heading">
                         <div class="footer-icon">
