--- a/blog.html
+++ b/blog.html
@@ -684,7 +684,8 @@
                             <i class="fa-solid fa-phone"></i>
                             <span>EMAIL US</span>
                         </div>
-                        <a href="#">infothomsan@gmail.com</a>
+                        <a href="mailto:thomas@thomsonbuilders.co.in">thomas@thomsonbuilders.co.in</a>
+                    <a href="mailto:info@thomsonbuilders.co.in">info@thomsonbuilders.co.in</a>
                     </div>
                 </div>
             </div>
