--- a/about.html
+++ b/about.html
@@ -76,7 +76,8 @@
                 </div>
                 <div class="nav-contact-details  d-none d-md-block">
                     <span>Mail Us</span>
-                    <h6> info@thomson-construction.com</h6>
+                                            <h6> info@thomsonbuilders.co.in</h6>
+
                 </div>
             </a>
         </div>
