--- a/projects.html
+++ b/projects.html
@@ -68,7 +68,8 @@
                 </div>
                 <div class="nav-contact-details  d-none d-md-block">
                     <span>Mail Us</span>
-                    <h6> info@thomson-construction.com</h6>
+                                            <h6> info@thomsonbuilders.co.in</h6>
+
                 </div>
             </a>
         </div>
@@ -489,8 +490,8 @@
                             <i class="fa-solid fa-phone"></i> <span>CALL US</span>
                         </div>
                         <div class="d-flex flex-column">
-                            <a href="tel:+91">+91 98765 43210</a>
-                            <a href="tel:+91">+91 98765 43210</a>
+                            <a href="tel:+917910833585">+91 79108 33585</a>
+                        <a href="tel:+918220149256">+91 82201 49256</a>
                         </div>
 
                     </div>
