--- a/contact.html
+++ b/contact.html
@@ -475,8 +475,7 @@
     <!-- After Footer Start -->
 
     <section class="after-footer">
-        <p>Copyright @ 2024 Thomson Builders. Developed by <a href="https://honeyiconics.com/"
-                target="_blank">Honeyiconics</a>.</p>
+        <p>Copyright @ 2024 Thomson Builders.</p>
     </section>
 
     <!-- After Footer End -->
